<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_chat"
            android:textAlignment="center"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/app_name_height"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_marginX"
            android:layout_marginTop="@dimen/input_marginY"
            android:layout_marginRight="@dimen/input_marginX"
            android:text="@string/signup_welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/login_welcome_text_height"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_marginY"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_width"
                android:layout_marginLeft="@dimen/input_marginX"
                android:layout_marginRight="@dimen/input_small_marginX"
                android:layout_weight="0"
                android:contentDescription="@string/login_description"
                app:srcCompat="@drawable/user_80"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_width"
                android:layout_marginLeft="@dimen/input_small_marginX"
                android:layout_marginRight="@dimen/input_marginX">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/input_background"
                    android:hint="@string/login_text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/login_button_text"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_marginY"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_width"
                android:layout_marginLeft="@dimen/input_marginX"
                android:layout_marginRight="@dimen/input_small_marginX"
                android:layout_weight="0"
                android:contentDescription="@string/email_description"
                app:srcCompat="@drawable/mail_80"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_width"
                android:layout_marginLeft="@dimen/input_small_marginX"
                android:layout_marginRight="@dimen/input_marginX">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/input_background"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/login_button_text"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_marginY"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_width"
                android:layout_marginLeft="@dimen/input_marginX"
                android:layout_marginRight="@dimen/input_small_marginX"
                android:layout_weight="0"
                android:contentDescription="@string/password_description"
                app:srcCompat="@drawable/password_80"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_width"
                android:layout_marginLeft="@dimen/input_small_marginX"
                android:layout_marginRight="@dimen/input_marginX"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/input_background"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/login_button_text"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_marginY"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_width"
                android:layout_marginLeft="@dimen/input_marginX"
                android:layout_marginRight="@dimen/input_small_marginX"
                android:layout_weight="0"
                android:contentDescription="@string/password_repeat_description"
                app:srcCompat="@drawable/password_80"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_repeat_password_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_width"
                android:layout_marginLeft="@dimen/input_small_marginX"
                android:layout_marginRight="@dimen/input_marginX"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/input_background"
                    android:hint="@string/password_repeat_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/login_button_text"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginLeft="@dimen/input_marginX"
            android:layout_marginTop="@dimen/input_marginY"
            android:layout_marginRight="@dimen/input_marginX"
            android:backgroundTint="@color/input_background"
            android:text="@string/signup_button_text"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_marginY"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/input_marginX"
                android:layout_weight="1"
                android:text="@string/login_info_text"
                android:textColor="@color/white"
                android:textSize="@dimen/signup_info_text"
                android:textStyle="italic"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/signin_relocate"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginRight="@dimen/input_marginX"
                android:layout_weight="1"
                android:backgroundTint="@color/input_background"
                android:text="@string/login_button_text"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>