<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/part_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/chat_list_padding" >

    <ImageView
        android:id="@+id/chat_photo"
        android:layout_width="@dimen/chat_list_photo_dimension"
        android:layout_height="@dimen/chat_list_photo_dimension"
        android:background="@drawable/round_outline"
        android:contentDescription="@string/chat_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/chat_nickname"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToOutline="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/chat_list_text_padding_left">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chat_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/chat_nickname"
                android:textSize="@dimen/chat_list_login_text_height"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:paddingEnd="@dimen/chat_list_time_padding"
                android:singleLine="true"
                android:text="@string/chat_time"
                android:textAlignment="textEnd"
                android:textSize="@dimen/chat_list_time_text_height"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/chat_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/chat_list_text_marginY"
            android:inputType="textMultiLine"
            android:maxLines="20"
            android:minLines="2"
            android:text="@string/chat_message"
            android:textSize="@dimen/chat_list_message_text_height"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>